boxshadow added and z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h1.intro-bergini {
 }
 
 div.sidebar {
-  z-index: 5;
+  z-index: 25;
   width: 33.3%;
   height: 100vh;
   background: #000000;
@@ -72,9 +72,20 @@ div.centered {
   padding: 75px 15px 15px 15px;
 }
 
+.hidden-header {
+  position: fixed;
+  z-index: 20;
+  width: 100%;
+  height: 60px;
+  background-color: #FFFFFF;
+    -webkit-box-shadow: 0px 0px 15px 20px rgba(255,255,255,0.8);
+    -moz-box-shadow: 0px 0px 15px 20px rgba(255,255,255,0.8);
+    box-shadow: 0px 0px 15px 20px rgba(255,255,255,0.8);
+}
+
 header {
   position: fixed;
-  z-index: 15;
+  z-index: 30;
   width: 100%;
   height: 60px;
 }
@@ -262,7 +273,7 @@ div.unslider {
 
 a.unslider-arrow {
   top: 0;
-  z-index: 300;
+  z-index: 15;
   width: 50%;
   height: 450px;
 }
